--- a/lesson7-8/index.html
+++ b/lesson7-8/index.html
@@ -12,8 +12,8 @@
         <header>
             <nav>
                 <div class="logo">
-                    <p class="logo__part1">Pingbull</p>
-                    <p class="logo__part2">er</p>
+                    <p class="logo__part">Pingbull</p>
+                    <p class="logo__part logo__part--1">er</p>
                 </div>
                 <ul class="menu">
                     <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
@@ -27,6 +27,7 @@
         </header>
         <main>
             <div class="slider">
+                <div class="slider__arrow"><img src="img/arrow.png" alt=""></div>
                 <div class="slider__box">
                     <p class="slider__name">Lorem ipsum dolor</p>
                     <p class="slider__slogan">It will make all of your dreams come true</p>
@@ -35,6 +36,7 @@
                        Nulla interdum arcu et felis aliquam a tempus lectus lobortis.</p>
                 </div>
                 <div class="slider__images"><img src="img/iphone.png" alt=""></div>
+                <div class="slider__arrow slider__arrow--right"><img src="img/arrow.png" alt=""></div>
             </div>
         </main>
         <div class="slider__nav">
@@ -70,9 +72,8 @@
         <div class="section__wrapper">
             <div class="testimonials">
                 <div class="testimonials__img"></div>
-                <div class="testimonials__name"></div>
-                <div class="testimonials__name1">PingbulLer</div>
-                <div class="testimonials__name2"> starts here</div>
+                <div class="testimonials__name">PingbulLer</div>
+                <div class="testimonials__name testimonials__name--part"> starts here</div>
                 <div class="testimonials__text">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
                     Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar
                     consequat”
@@ -120,9 +121,7 @@
     <section class="text">
         <div class="text__wrapper">
             <div class="text__box">
-                <div class="text__titel">
-                    <p class="text__titel">Pingbull</p><p class="text__titel2">er</p>
-                </div>
+                <p class="text__titel">Pingbull</p><p class="text__titel text__titel--2">er</p>
                 <p class="text__copy">Copyright 2013, Pingbull AS</p>
                 <p class="text__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque.
                     Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus
@@ -153,8 +152,8 @@
                 <li class="menu__item"><a class="menu__link" href="#">Dolor sit amet</a></li>
             </ul>
             <div class="designed">
-                <p class="designed__1">Designed by</p>
-                <p class="designed__2"> Pingbull AS</p>
+                <p class="designed__text">Designed by</p>
+                <p class="designed__text designed__text--1"> Pingbull AS</p>
             </div>
         </div>
     </footer>
