--- a/lesson7-8/index.html
+++ b/lesson7-8/index.html
@@ -48,20 +48,20 @@
     </div>
     <div class="blurbs">
         <div class="blurbs__wrapper">
-            <div class="blurbs__img wrench"></div>
             <div class="blurbs__box">
+                <div class="blurbs__img wrench"></div>
                 <p class="blurbs__name">About our company</p>
                 <p class="blurbs__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam</p>
                 <p><a class="blurbs__link" href="#">Read more</a></p>
             </div>
-            <div class="blurbs__img say"></div>
-            <div class="blurbs__box">
+            <div class="blurbs__box blurbs__box--2">
+                <div class="blurbs__img say"></div>
                 <p class="blurbs__name">About our company</p>
                 <p class="blurbs__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam</p>
                 <p><a class="blurbs__link" href="#">Read more</a></p>
             </div>
-            <div class="blurbs__img music"></div>
-            <div class="blurbs__box">
+            <div class="blurbs__box blurbs__box--3">
+                <div class="blurbs__img music"></div>
                 <p class="blurbs__name">About our company</p>
                 <p class="blurbs__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam</p>
                 <p><a class="blurbs__link" href="#">Read more</a></p>
