--- a/lesson7-8/index.html
+++ b/lesson7-8/index.html
@@ -26,8 +26,9 @@
             </nav>
         </header>
         <main>
+            <div class="slider__arrow"><img src="img/arrow.png" alt=""></div>
+            <div class="slider__arrow slider__arrow--right"><img src="img/arrow.png" alt=""></div>
             <div class="slider">
-                <div class="slider__arrow"><img src="img/arrow.png" alt=""></div>
                 <div class="slider__box">
                     <p class="slider__name">Lorem ipsum dolor</p>
                     <p class="slider__slogan">It will make all of your dreams come true</p>
@@ -36,7 +37,6 @@
                        Nulla interdum arcu et felis aliquam a tempus lectus lobortis.</p>
                 </div>
                 <div class="slider__images"><img src="img/iphone.png" alt=""></div>
-                <div class="slider__arrow slider__arrow--right"><img src="img/arrow.png" alt=""></div>
             </div>
         </main>
         <div class="slider__nav">
@@ -71,12 +71,19 @@
     <section>
         <div class="section__wrapper">
             <div class="testimonials">
-                <div class="testimonials__img"></div>
-                <div class="testimonials__name">PingbulLer</div>
-                <div class="testimonials__name testimonials__name--part"> starts here</div>
-                <div class="testimonials__text">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
-                    Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar
-                    consequat”
+                <div class="testimonials__box">
+                    <div class="testimonials__img"></div>
+                    <div class="testimonials__name">PingbulLer</div>
+                    <div class="testimonials__name testimonials__name--part"> starts here</div>
+                    <div class="testimonials__text">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
+                        Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”
+                    </div>
+                </div>
+                <div class="testimonials__slider">
+                    <p class="slider__button slider__button--testimonials"></p>
+                    <p class="slider__button slider__button--testimonials"></p>
+                    <p class="slider__button slider__button--testimonials"></p>
+                    <p class="slider__button slider__button--testimonials"></p>
                 </div>
             </div>
             <div class="blog">
@@ -99,12 +106,6 @@
                     </div>
                 </div>
                 <p class="blog__item"><a class="blog__link" href="#">read more here</a></p>
-            </div>
-            <div class="testimonials__slider">
-                <p class="slider__button slider__button--testimonials"></p>
-                <p class="slider__button slider__button--testimonials"></p>
-                <p class="slider__button slider__button--testimonials"></p>
-                <p class="slider__button slider__button--testimonials"></p>
             </div>
         </div>
     </section>
