--- a/lesson7-8/index.html
+++ b/lesson7-8/index.html
@@ -23,6 +23,16 @@
                     <li class="menu__item"><a class="menu__link" href="#">Lorem ipsum</a></li>
                     <li class="menu__item"><a class="menu__link" href="#">Dolor sit amet</a></li>
                 </ul>
+                <div class="droplist_menu">
+                    <p class="droplist_menu__item"><a class="menu__link droplist_menu__home_link" href="#">Home</a></p>
+                    <ul class="droplist">
+                        <li class="droplist__item"><a class="menu__link menu__link--droplist" href="#">About</a></li>
+                        <li class="droplist__item"><a class="menu__link menu__link--droplist" href="#">Blog</a></li>
+                        <li class="droplist__item"><a class="menu__link menu__link--droplist" href="#">Products</a></li>
+                        <li class="droplist__item"><a class="menu__link menu__link--droplist" href="#">Lorem ipsum</a></li>
+                        <li class="droplist__item"><a class="menu__link menu__link--droplist" href="#">Dolor sit amet</a></li>
+                    </ul>
+                </div>
             </nav>
         </header>
         <main>
