--- a/lesson7-8/index.html
+++ b/lesson7-8/index.html
@@ -116,14 +116,15 @@
                     </div>
                 </div>
                 <p class="blog__item"><a class="blog__link" href="#">read more here</a></p>
+                <p class="blog__item blog__item--media"><a class="blog__link" href="#">more blog posts</a></p>
             </div>
         </div>
     </section>
     <div class="logos">
         <div class="logos__box">
             <img class="logos__img" src="img/logo1.png" alt="">
-            <img class="logos__img" src="img/logo2.png" alt="">
-            <img class="logos__img" src="img/logo3.png" alt="">
+            <img class="logos__img logos__img--2" src="img/logo2.png" alt="">
+            <img class="logos__img logos__img--3" src="img/logo3.png" alt="">
             <img class="logos__img" src="img/logo4.png" alt="">
             <img class="logos__img" src="img/logo5.png" alt="">
             <img class="logos__img" src="img/logo6.png" alt="">
@@ -134,18 +135,20 @@
             <div class="text__box">
                 <p class="text__titel">Pingbull</p><p class="text__titel text__titel--2">er</p>
                 <p class="text__copy">Copyright 2013, Pingbull AS</p>
+                <p class="text__name text__name--1">new categories</p>
                 <p class="text__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque.
                     Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus
                 </p>
             </div>
             <div class="text__box">
-                <p class="text__name">RECENT COMMENTS</p>
+                <p class="text__name text__name--2">recent comments</p>
+                <p class="text__name text__name--1">new categories</p>
                 <p class="text__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
                     Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar
                 </p>
             </div>
             <div class="text__box text__box--3">
-                <p class="text__name">NEWS CATEGORIES</p>
+                <p class="text__name">news categories</p>
                 <p class="text__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
                     Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar
                 </p>
