--- a/lesson7-8/index.html
+++ b/lesson7-8/index.html
@@ -6,34 +6,33 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="background">
         <header>
-            <nav>
-                <div class="logo">
-                    <p class="logo__part">Pingbull</p>
-                    <p class="logo__part logo__part--1">er</p>
-                </div>
-                <ul class="menu">
-                    <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
-                    <li class="menu__item"><a class="menu__link" href="#">About</a></li>
-                    <li class="menu__item"><a class="menu__link" href="#">Blog</a></li>
-                    <li class="menu__item"><a class="menu__link" href="#">Products</a></li>
-                    <li class="menu__item"><a class="menu__link" href="#">Lorem ipsum</a></li>
-                    <li class="menu__item"><a class="menu__link" href="#">Dolor sit amet</a></li>
+            <div class="logo">
+                <p class="logo__part">Pingbull</p>
+                <p class="logo__part logo__part--1">er</p>
+            </div>
+            <ul class="menu">
+                <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
+                <li class="menu__item"><a class="menu__link" href="#">About</a></li>
+                <li class="menu__item"><a class="menu__link" href="#">Blog</a></li>
+                <li class="menu__item"><a class="menu__link" href="#">Products</a></li>
+                <li class="menu__item"><a class="menu__link" href="#">Lorem ipsum</a></li>
+                <li class="menu__item"><a class="menu__link" href="#">Dolor sit amet</a></li>
+            </ul>
+            <div class="droplist_menu">
+                <p class="droplist_menu__item"><a class="menu__link droplist_menu__home_link" href="#">Home</a></p>
+                <ul class="droplist">
+                    <li class="droplist__item"><a class="menu__link menu__link--droplist" href="#">About</a></li>
+                    <li class="droplist__item"><a class="menu__link menu__link--droplist" href="#">Blog</a></li>
+                    <li class="droplist__item"><a class="menu__link menu__link--droplist" href="#">Products</a></li>
+                    <li class="droplist__item"><a class="menu__link menu__link--droplist" href="#">Lorem ipsum</a></li>
+                    <li class="droplist__item"><a class="menu__link menu__link--droplist" href="#">Dolor sit amet</a></li>
                 </ul>
-                <div class="droplist_menu">
-                    <p class="droplist_menu__item"><a class="menu__link droplist_menu__home_link" href="#">Home</a></p>
-                    <ul class="droplist">
-                        <li class="droplist__item"><a class="menu__link menu__link--droplist" href="#">About</a></li>
-                        <li class="droplist__item"><a class="menu__link menu__link--droplist" href="#">Blog</a></li>
-                        <li class="droplist__item"><a class="menu__link menu__link--droplist" href="#">Products</a></li>
-                        <li class="droplist__item"><a class="menu__link menu__link--droplist" href="#">Lorem ipsum</a></li>
-                        <li class="droplist__item"><a class="menu__link menu__link--droplist" href="#">Dolor sit amet</a></li>
-                    </ul>
-                </div>
-            </nav>
+            </div>
         </header>
         <main>
             <div class="slider__arrow"><img src="img/arrow.png" alt=""></div>
@@ -59,19 +58,19 @@
     <div class="blurbs">
         <div class="blurbs__wrapper">
             <div class="blurbs__box">
-                <div class="blurbs__img wrench"></div>
+                <div class="blurbs__img blurbs__img--wrench"></div>
                 <p class="blurbs__name">About our company</p>
                 <p class="blurbs__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam</p>
                 <p><a class="blurbs__link" href="#">Read more</a></p>
             </div>
             <div class="blurbs__box blurbs__box--2">
-                <div class="blurbs__img say"></div>
+                <div class="blurbs__img blurbs__img--say"></div>
                 <p class="blurbs__name">About our company</p>
                 <p class="blurbs__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam</p>
                 <p><a class="blurbs__link" href="#">Read more</a></p>
             </div>
             <div class="blurbs__box blurbs__box--3">
-                <div class="blurbs__img music"></div>
+                <div class="blurbs__img blurbs__img--music"></div>
                 <p class="blurbs__name">About our company</p>
                 <p class="blurbs__text">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam</p>
                 <p><a class="blurbs__link" href="#">Read more</a></p>
