--- a/lesson7-8/index.html
+++ b/lesson7-8/index.html
@@ -88,6 +88,10 @@
                         Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”
                     </div>
                 </div>
+                <div class="testimonials__triangle">
+                    <div class="triangle__back"></div>
+                    <div class="triangle__front"></div>
+                </div>
                 <div class="testimonials__slider">
                     <p class="slider__button slider__button--testimonials"></p>
                     <p class="slider__button slider__button--testimonials"></p>
