--- a/js5-6/index.html
+++ b/js5-6/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>js1-2</title>
+    <title>js5-6_dz</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
 <script src="script.js"></script>
 
 </body>
