--- a/js7-8/index.html
+++ b/js7-8/index.html
@@ -9,7 +9,7 @@
 <div class="tabs">
     <div class="header__background"></div>
     <div class="list">
-        <div class="header red h1">Nunc tincidunt</div>
+        <div class="header h1">Nunc tincidunt</div>
         <div class="par">
             <p> Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante.
                 Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed magna quis ligula eleifend adipiscing. Duis orci.
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div  class="list">
-        <div class="header red h2">Proin dolor</div>
+        <div class="header h2">Proin dolor</div>
         <div class="par par1">
             <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis.
                 Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem.
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="list">
-        <div class="header red h3">Aenean lacinia</div>
+        <div class="header h3">Aenean lacinia</div>
         <div class="par par1">
             <p>Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem.
                 Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque.
