--- a/js7-8/index.html
+++ b/js7-8/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <body>
-<div class="tabs">
+<div class="tabs" id="d">
     <div class="header__background"></div>
     <div class="list">
-        <div class="header h1">Nunc tincidunt</div>
+        <div class="header h1 active">Nunc tincidunt</div>
         <div class="par">
             <p> Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante.
                 Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed magna quis ligula eleifend adipiscing. Duis orci.
