--- a/js7-8/index.html
+++ b/js7-8/index.html
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div  class="list">
-        <div class="header h2">Proin dolor</div>
+        <div class="header h2 unactive act hover">Proin dolor</div>
         <div class="par par1">
             <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis.
                 Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem.
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="list">
-        <div class="header h3">Aenean lacinia</div>
+        <div class="header h3 unactive act hover">Aenean lacinia</div>
         <div class="par par1">
             <p>Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem.
                 Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque.
@@ -45,17 +45,17 @@
         <div>
             <label for="firstname">Firstname</label>
             <input type="text" id="firstname" name="firstname">
-            <p class="input">Please provide your firstname.</p>
+            <p class="input f">Please provide your firstname.</p>
         </div>
         <div>
             <label for="lastname">Lastname</label>
             <input type="text" id="lastname" name="lastname">
-            <p class="input">Please provide your lastname.</p>
+            <p class="input f">Please provide your lastname.</p>
         </div>
         <div>
             <label for="address">Address</label>
             <input type="text" id="address" name="address">
-            <p class="input">Your home or work address.</p>
+            <p class="input f">Your home or work address.</p>
         </div>
     </fieldset>
 </form>
