--- a/lesson1/dz1.html
+++ b/lesson1/dz1.html
@@ -10,7 +10,7 @@
     <h1>КЛЮЙ АНДРЕЙ СЕРГЕЕВИЧ</h1>
   <div class="text">
    <div class="foto">
-     <img src="foto.JPG">
+     <img src="foto.jpg">
    </div>
    <div class="profession">
      Главный специалист
