--- a/js7-8/index.html
+++ b/js7-8/index.html
@@ -45,17 +45,17 @@
         <div>
             <label for="firstname">Firstname</label>
             <input type="text" id="firstname" name="firstname">
-            <p class="input f">Please provide your firstname.</p>
+            <p class="tooltips">Please provide your firstname.</p>
         </div>
         <div>
             <label for="lastname">Lastname</label>
             <input type="text" id="lastname" name="lastname">
-            <p class="input f">Please provide your lastname.</p>
+            <p class="tooltips">Please provide your lastname.</p>
         </div>
         <div>
             <label for="address">Address</label>
             <input type="text" id="address" name="address">
-            <p class="input f">Your home or work address.</p>
+            <p class="tooltips">Your home or work address.</p>
         </div>
     </fieldset>
 </form>
@@ -63,4 +63,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
