--- a/js9-10/index.html
+++ b/js9-10/index.html
@@ -116,6 +116,7 @@
         <a data-jcarousel-control="true" data-target="-=1" href="#" class="jcarousel-control-prev">&lsaquo;</a>
         <a data-jcarousel-control="true" data-target="+=1" href="#" class="jcarousel-control-next">&rsaquo;</a>
     </div>
+    <div class="inline-block">
     <select>
         <option>-- Выберите --</option>
         <option>Пункт 1</option>
@@ -124,7 +125,8 @@
         <option>Пункт 4</option>
         <option>Пункт 5</option>
     </select>
-    <div class="box visible">
+    </div>
+    <div class="inline-block box visible">
         <h4>Чекбоксы плагин</h4>
         <div class="section lh">
             <label class="block"><input type="checkbox" class="block"> чекбокс 1</label>
@@ -133,7 +135,7 @@
             <label class="block"><input type="checkbox" class="block" disabled checked> неактивный чекбокс</label>
         </div>
     </div>
-    <div class="control-group">
+    <div class="inline-block control-group">
         <h1>Checkboxes CSS</h1>
         <label class="control control--checkbox">First checkbox
             <input type="checkbox" checked="checked"  >
