--- a/js9-10/index.html
+++ b/js9-10/index.html
@@ -16,20 +16,20 @@
     </head>
     <body>
     <ul class="menu">
-        <li class="menu__item"><a href="#">Главная</a></li>
-        <li class="menu__item"><a href="#">Путешествие <img class="triangle" src="img/triangle.png" alt=""></a>
+        <li><a href="#">Главная</a></li>
+        <li><a href="#">Путешествие <img class="triangle" src="img/triangle.png" alt=""></a>
             <ul class="submenu">
-                <li class="menu__item">
+                <li>
                     <a href="#">Путешествие 1</a>
                     <ul class="submenu2">
-                        <li class="menu__item"><a href="#">Путешествие 1</a></li>
-                        <li class="menu__item"><a href="#">Путешествие 2</a></li>
-                        <li class="menu__item"><a href="#">Путешествие 3</a></li>
-                        <li class="menu__item"><a href="#">Путешествие 4</a></li>
-                        <li class="menu__item"><a href="#">Путешествие 5</a></li>
+                        <li><a href="#">Путешествие 1</a></li>
+                        <li><a href="#">Путешествие 2</a></li>
+                        <li><a href="#">Путешествие 3</a></li>
+                        <li><a href="#">Путешествие 4</a></li>
+                        <li><a href="#">Путешествие 5</a></li>
                     </ul>
                 </li>
-                <li class="menu__item">
+                <li>
                     <a href="#">Путешествие 2</a>
                     <ul class="submenu2">
                         <li><a href="#">Путешествие 1</a></li>
