--- a/js19-20/index.html
+++ b/js19-20/index.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/owlcarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owlcarousel/owl.theme.default.css">
     <link rel="stylesheet" type="text/css" href="css/animate.css">
-    <script src="js/vendor/wow.min.js"></script>
+    <script src="js/wow.min.js"></script>
 </head>
 <body>
 <header class="centerer">
@@ -53,10 +52,10 @@
 </header>
 <section class="centerer">
     <div class="slider-wrapper">
-        <div class="owl-carousel">
-            <div class="item"><img src="img/slide_1.jpg" alt=""></div>
-            <div class="item"><img src="img/slide_2.jpg" alt=""></div>
-            <div class="item"><img src="img/slide_3.jpg" alt=""></div>
+        <div class="owl-carousel owl-theme">
+            <img class="item" src="img/slide_1.jpg" alt="">
+            <img class="item" src="img/slide_2.jpg" alt="">
+            <img class="item" src="img/slide_3.jpg" alt="">
         </div>
         <div class="slogan">
             <p class="slogan--name">Build</p>
@@ -277,7 +276,7 @@
         </div>
     <script src="js/src/jquery.fancybox.js"></script>
     <script src="js/src/fancybox.init.js"></script>
-    <script src="js/vendor/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/owlcarousel/owl.carousel.min.js"></script>
     <script type="text/javascript" src="js/src/script.js"></script>
 </footer>
