--- a/js19-20/index.html
+++ b/js19-20/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>js19-20</title>
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/src/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/src/style.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/owlcarousel/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owlcarousel/owl.theme.default.css">
-    <link rel="stylesheet" type="text/css" href="css/animate.css">
-    <script src="js/wow.min.js"></script>
+    <link rel="stylesheet" href="css/src/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/src/owl.theme.default.css">
+    <link rel="stylesheet" type="text/css" href="css/src/animate.css">
+    <script src="js/vendor/wow.min.js"></script>
 </head>
 <body>
 <header class="centerer">
@@ -274,10 +274,10 @@
                 <div class="copyright">© 2014 Build Home</div>
             </div>
         </div>
-    <script src="js/src/jquery.fancybox.js"></script>
+    <script src="js/vendor/jquery.fancybox.js"></script>
     <script src="js/src/fancybox.init.js"></script>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/owlcarousel/owl.carousel.min.js"></script>
+    <script src="js/vendor/jquery.min.js"></script>
+    <script src="js/vendor/owl.carousel.min.js"></script>
     <script type="text/javascript" src="js/src/script.js"></script>
 </footer>
 </body>
