--- a/js19-20/index.html
+++ b/js19-20/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>js19-20</title>
-    <link rel="stylesheet" type="text/css" href="css/src/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/src/style.css">
+    <!--<link rel="stylesheet" type="text/css" href="css/src/reset.css">-->
+    <!--<link rel="stylesheet" type="text/css" href="css/src/style.css">-->
+    <link rel="stylesheet" href="css/main.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/src/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/src/owl.theme.default.css">
-    <link rel="stylesheet" type="text/css" href="css/src/animate.css">
-    <script src="js/vendor/wow.min.js"></script>
+    <script src="js/main.min.js"></script>
+    <!--<link rel="stylesheet" href="css/src/owl.carousel.min.css">-->
+    <!--<link rel="stylesheet" href="css/src/owl.theme.default.css">-->
+    <!--<link rel="stylesheet" type="text/css" href="css/src/animate.css">-->
+    <!--<script src="js/src/wow.min.js"></script>-->
+    <!--<script src="js/vendor.min.js"></script>-->
 </head>
 <body>
 <header class="centerer">
@@ -264,21 +267,21 @@
                     </ul>
                 </div>
             </div>
-
         </div>
         <div class="footer__contacts">
             <div class="centerer clearfix">
-                <div class="contacts__item"> <i class="fa fa-map-marker"></i>BuildHomeLtd.  Street Name 123   23 45 Cityname</div>
+                <div class="contacts__item"><i class="fa fa-map-marker"></i>BuildHomeLtd.  Street Name 123   23 45 Cityname</div>
                 <div class="contacts__item"><i class="fa fa-mobile"></i> +123 900 123 456</div>
                 <div class="contacts__item"><i class="fa fa-envelope-o"></i> info@buildhome.web</div>
                 <div class="copyright">© 2014 Build Home</div>
             </div>
         </div>
-    <script src="js/vendor/jquery.fancybox.js"></script>
-    <script src="js/src/fancybox.init.js"></script>
-    <script src="js/vendor/jquery.min.js"></script>
-    <script src="js/vendor/owl.carousel.min.js"></script>
-    <script type="text/javascript" src="js/src/script.js"></script>
+    <!--<script src="js/src/jquery.fancybox.js"></script>-->
+    <!--<script src="js/vendor/fancybox.init.js"></script>-->
+    <!--<script src="js/vendor/jquery.min.js"></script>-->
+    <!--<script src="js/vendor/owl.carousel.min.js"></script>-->
+    <!--<script src="js/src/script.js"></script>-->
+    <script src="js/vendor.min.js"></script>
 </footer>
 </body>
 </html>
