--- a/massage/onepage.html
+++ b/massage/onepage.html
@@ -194,7 +194,7 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2">
-                        <h3 class="h4">Про Меня</h3>
+                        <h3 class="h4">Обо мне</h3>
                         <div class="spacer-15"></div>
                         <p class="lead">Integer tincidunt Cras dapibus. <a class="tipped" data-title="Sample Text" data-tipper-options='{"direction":"top"}'><b>Vivamus elementum</b></a> ultricies nisi vel augue. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante dapibus.</p>
                     </div>
@@ -1790,7 +1790,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-sm-8">
-                        <h4 class="">Если у вас возникли вопросы напишите нам и мы свяжемся с вами в ближайшее время</h4>
+                        <h4 class="">Если у вас возникли вопросы напишите нам, и мы свяжемся с вами в ближайшее время</h4>
                     </div>
                     <!--<div class="col-md-4 col-sm-4">-->
                         <!--<a class="btn btn-md btn-white float-right float-none-xs">Написать</a>-->
