--- a/massage/onepage.html
+++ b/massage/onepage.html
@@ -1921,7 +1921,7 @@
                             <div class="contact-icon-left"><i class="ion ion-ios-location"></i></div>
                             <h6>Город</h6>
                             <p>
-                                Сочи
+                                Киев
                             </p>
 
                         </div>
