--- a/test/index.html
+++ b/test/index.html
@@ -11,11 +11,13 @@
 <body>
 <header>
     <div class="section-wrapper wrapper">
-        <nav>
-            <a href="#" class="log-in">Log in</a>
-            <a href="#" class="sing-up">Sign up</a>
-        </nav>
-        <h1>URLAUBSGLÜCK</h1>
+        <div class="log-in__block">
+            <nav>
+                <a href="#" class="log-in">Log in</a>
+                <a href="#" class="sing-up">Sign up</a>
+            </nav>
+            <h1>URLAUBSGLÜCK</h1>
+        </div>
         <p class="slogan">Share your holiday dreams</p>
         <p class="slogan-2">And find the perfect partner to fullfill it</p>
         <a href="#" class="button">Find your holiday partner</a>
@@ -53,7 +55,7 @@
 <section class="partner">
     <div class="section-wrapper">
         <h2>Meet a partner for your best holiday</h2>
-        <div class="partner__container">
+        <div class="partner__container clearfix">
             <div class="partner__item">
                 <img class="partner__img" src="src/img/partner1.jpg" alt="">
                 <h4>Bradley Hunter</h4>
@@ -78,12 +80,9 @@
         <a href="#" class="button button--see-partners">See other partners</a>
     </div>
 </section>
-<section class="ideas">
+<section class="wrapper ideas clearfix">
     <h2>Discover holiday activity ideas</h2>
-    <div class="ideas__item">
-        <div class="grid">
-
-        </div>
+    <div class="grid clearfix">
     </div>
 </section>
 <section class="search">
@@ -93,7 +92,7 @@
     <div class="activity"></div>
     <form action="">
         <input type="text" placeholder="Enter your interests" required>
-        <a class="button" type="submit">Search partners</a>
+        <a class="button search_activity" type="submit">Search partners</a>
     </form>
     </div>
 </section>
@@ -110,7 +109,6 @@
     <p class="copyright">Designed by</p>
     <img src="src/img/logo.png" alt="">
 </footer>
-<script src="src/js/masonry.pkgd.min.js"></script>
 <script src="src/js/script.js"></script>
 <script src="src/js/tmpl.js"></script>
 </body>
