--- a/test/index.html
+++ b/test/index.html
@@ -77,6 +77,28 @@
                 <p>Based in Chicago. I love playing tennis and loud music.</p>
             </div>
         </div>
+        <div class="partner__container clearfix hidden">
+            <div class="partner__item">
+                <img class="partner__img" src="src/img/partner5.jpg" alt="">
+                <h4>Bradley Hunter</h4>
+                <p>Based in Chicago. I love playing tennis and loud music.</p>
+            </div>
+            <div class="partner__item">
+                <img class="partner__img" src="src/img/partner6.jpg" alt="">
+                <h4>Heather Walker</h4>
+                <p>I'm a happy person that loves cats and climbing on mountains.</p>
+            </div>
+            <div class="partner__item">
+                <img class="partner__img" src="src/img/partner7.jpg" alt="">
+                <h4>Lucas Marsha</h4>
+                <p>I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
+            </div>
+            <div class="partner__item">
+                <img class="partner__img" src="src/img/partner8.jpg" alt="">
+                <h4>Bradley Hunter</h4>
+                <p>Based in Chicago. I love playing tennis and loud music.</p>
+            </div>
+        </div>
         <a href="#" class="button button--see-partners">See other partners</a>
     </div>
 </section>
