--- a/StarWarsAPI/index.html
+++ b/StarWarsAPI/index.html
@@ -5,7 +5,7 @@
     <title>SWAPI Demo</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script>new WOW().init();</script>
